resources/public/css/styles.css
body {
    background-color: green;
    color: #CCC;
    font-family: sans-serif;
}

button {
    padding: 1em;
}
h1 {
    margin: 0;
}

/* buttons */
.button, input[type="submit"] {
    background: none;
    border: #CCC solid 2px;
    color: #CCC;
    display: inline-block;
    font-size: 1em;
    min-width: 100px;
    padding: 5px;
    text-align: center;
    text-decoration: none;
    border-radius: 10px;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
}
.button:hover, input[type="submit"]:hover {
    border-color: white;
    color: white;
}

/* pages */
body.page {
    text-align: center;
}
body.page .row1 {
    margin-top: 30px;
}
body.page .row1, body.page .row2 {
    margin-bottom: 30px;
}

/* home page */
body.home .row2 div {
    margin: 5px;
}
body.home a.howto {
    color: #CCC;
}
body.home p.small {
    font-size: .65em;
    margin: 0;
    color: #999;
}
body.home p.small:first-of-type {
    margin-top: 5px;
}

/* create game page */
body.create .row2 input {
    margin-top: 5px;
}

ul {
    margin: 0;
    padding: 0;
}
.card {
    background-position: -260px -370px;
    display: inline-block;
    height: 314px;
    width: 226px;
}

.hand {
    opacity: .82;
    overflow-x: scroll;
    overflow-y: hidden;
    white-space: nowrap;
}
.tablecards li, .hand li {
    display: inline-block;
    overflow: hidden;
}
.hand li:not(:last-child) {
    width: 53px;
}
.hand.onus {
    opacity: 1;
}

.points {
    background-color: rgba(0, 0, 0, 0.5);
    border-radius: 8px;
    display: inline-block;
    margin-bottom: 1em;
    padding: 1em;
}
.points div {
    margin: 1em 0;
}
.points li {
    display: inline;
    margin-right: .5em;
}

